--- a/roles/sublime/tasks/MacOSX.yml
+++ b/roles/sublime/tasks/MacOSX.yml
@@ -1,22 +1,38 @@
 ---
+
+- name: "Get sublime stat"
+  stat:
+    path: "{{ sublimetext_bin }}"
+  register: sublimetext_stat
+
+- name: "Get Sublime versions"
+  script: '"{{ sublimetext_bin }}" -v'
+  register: sublimetext_version
+  when: sublimetext_stat.stat.exists == True
+
 - name: "Download sublimetext's .dmg file"
   get_url: url="{{ sublimetext_url_dmg }}" dest="{{ sublimetext_tmp_dmg }}"
+  when: sublimetext_stat.stat.exists == False or (sublimetext_version.stdout | search("{{ sublimetext_bin }}"))
 
 - name: "Mount sublimetext's .dmg file"
   command: hdiutil attach {{ sublimetext_tmp_dmg }} chdir=/tmp
+  when: sublimetext_stat.stat.exists == False or (sublimetext_version.stdout | search("{{ sublimetext_bin }}"))
 
 - name: "Copy sublimetext app to Applications directory"
   copy: 
     src: "{{ sublimetext_mount }}/Sublime Text.app" 
     dest: "/Applications"
     mode: "u=rwx,g=rx,o=rx" 
+  when: sublimetext_stat.stat.exists == False or (sublimetext_version.stdout | search("{{ sublimetext_bin }}"))
 
 - name: "Unmount sublimetext's .dmg file"
   command: hdiutil detach "{{ sublimetext_mount }}"
+  when: sublimetext_stat.stat.exists == False or (sublimetext_version.stdout | search("{{ sublimetext_bin }}"))
 
 - name: "Ensure symlinks in bin"
-  sudo: Yes
-  file: src="/Applications/Sublime Text.app/Contents/SharedSupport/bin/subl" dest="/usr/bin/{{ item }}" state=link
+  become: yes
+  file: src="{{ sublimetext_bin }}" dest="/usr/local/bin/{{ item }}" state=link
   with_items:
     - subl
     - sublime
+  when: sublimetext_stat.stat.exists == False or (sublimetext_version.stdout | search("{{ sublimetext_bin }}"))
